@@ -3,6 +3,9 @@ Apache SIS Change Log
 
 Release 0.3-incubating - Current Development
 
+* SIS-70: Make QuadTreeNode and associated classes package private
+  (Martin Desruisseaux, mattmann)
+
 * SIS-56: Merged the sis-parent/pom.xml with the root pom.xml.
   (Martin Desruisseaux)
 
